--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -17,7 +17,7 @@ jobs:
           - name: Set up SSH
             # This 'env' block makes the secret available as an environment variable
             env:
-              GITLAB_SSH_KEY: ${{ secrets.GITLAB_DEPLOY_KEY }}
+              GITLAB_SSH_KEY: ${{ secrets.GITLAB_DEPLOY_KEY_INUN }}
             run: |
               mkdir -p ~/.ssh
               echo "$GITLAB_SSH_KEY" > ~/.ssh/id_rsa
@@ -26,5 +26,5 @@ jobs:
     
           - name: Push to GitLab
             run: |
-              git remote add gitlab git@gitlab.com:nisar-science-algorithms/ecosystems/crop_area/CropArea_L3product.git
+              git remote add gitlab git@gitlab.com:nisar-science-algorithms/ecosystems/inundation/ProductGeneration.git
               git push gitlab main
